--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,39 @@
-
+*, html {
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1 {
+    font-size: 10px;
+    font-family: Verdana, sans-serif;
+    background-color: #486796;
+    color: white;
+    padding: 2%;
+    text-align: center;
+  }
+  
+  /* UV Index Colors */
+  .list-group-item {
+    line-height: 0.5;
+    border: none;
+  }
+  
+  .low {
+    background-color: #A9DFBF;
+  }
+  
+  .moderate {
+    background-color: #F9E79F;
+  }
+  
+  .high {
+    background-color: #E59866;
+  }
+  
+  .very-high {
+    background-color: #CB4335;
+  }
+  
+  .extreme {
+    background-color: #AA336A;
+  }
